--- a/SaleApp/src/main/resources/products.properties
+++ b/SaleApp/src/main/resources/products.properties
@@ -4,4 +4,10 @@
 product.name=T\u00ean s\u1ea3n ph\u1ea9m
 product.price=G\u00eda s\u1ea3n ph\u1ea9m
 product.image=\u1ea2nh s\u1ea3n ph\u1ea9m
+product.des=M\u00f4 t\u1ea3 s\u1ea3n ph\u1ea9m
+product.cate=Danh m\u1ee5c s\u1ea3n ph\u1ea9m
 product.add=Th\u00eam s\u1ea3n ph\u1ea9m
+product.update=C\u1eadp nh\u1eadt s\u1ea3n ph\u1ea9m
+product.name.nullErr=T\u00ean l\u00e0 b\u1eaft bu\u1ed9c!
+product.name.maxLen=T\u00ean b\u1eaft bu\u1ed9c, t\u1ed1i \u0111a 100 k\u00fd t\u1ef1!
+product.price.nullErr=G\u00eda l\u00e0 b\u1eaft bu\u1ed9c!
