--- a/SaleApp/pom.xml
+++ b/SaleApp/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>spring-orm</artifactId>
             <version>5.2.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.1.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
